fix: icon alignment

--- a/inc/assets/css/ast-builder-customizer-rtl.css
+++ b/inc/assets/css/ast-builder-customizer-rtl.css
@@ -5022,7 +5022,7 @@ i.fipicon-angle-left:before {
     width: 20px;
     height: 20px;
     font-size: 16px;
-	line-height: 18px;
+	line-height: 20px;
 }
 
 .ahfb-builder-item > .ahfb-builder-item-icon.ahfb-setting-icon {
